--- a/TinyToastSample/Base.lproj/Main.storyboard
+++ b/TinyToastSample/Base.lproj/Main.storyboard
@@ -137,31 +137,34 @@
                             <stackView opaque="NO" contentMode="scaleToFill" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="b38-0Z-WXu">
                                 <rect key="frame" x="20" y="303" width="335" height="30"/>
                                 <subviews>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="B2u-tA-dzO">
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="B2u-tA-dzO" customClass="StandardButton" customModule="TinyToastSample" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="0.0" width="108.5" height="30"/>
-                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="15"/>
-                                        <state key="normal" title="show"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                                        <state key="normal" title="show">
+                                            <color key="titleColor" red="0.0" green="0.50196081400000003" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                        </state>
                                         <connections>
-                                            <action selector="btnShowAction:" destination="BYZ-38-t0r" eventType="touchUpInside" id="E29-nX-hLZ"/>
+                                            <action selector="btnShowAction:" destination="BYZ-38-t0r" eventType="touchUpInside" id="1M7-0e-JAJ"/>
                                         </connections>
                                     </button>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="L3N-hj-uDs">
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="L3N-hj-uDs" customClass="StandardButton" customModule="TinyToastSample" customModuleProvider="target">
                                         <rect key="frame" x="113.5" y="0.0" width="108" height="30"/>
-                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="15"/>
-                                        <state key="normal" title="dismiss"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                                        <state key="normal" title="dismiss">
+                                            <color key="titleColor" red="0.0" green="0.50196081400000003" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                        </state>
                                         <connections>
-                                            <action selector="btnDismissAction:" destination="BYZ-38-t0r" eventType="touchUpInside" id="3zH-hQ-nLD"/>
+                                            <action selector="btnDismissAction:" destination="BYZ-38-t0r" eventType="touchUpInside" id="1ou-rm-HqW"/>
                                         </connections>
                                     </button>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="A2n-YE-C7G">
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="A2n-YE-C7G" customClass="StandardButton" customModule="TinyToastSample" customModuleProvider="target">
                                         <rect key="frame" x="226.5" y="0.0" width="108.5" height="30"/>
-                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="15"/>
-                                        <state key="normal" title="dismissAll"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                                        <state key="normal" title="dismissAll">
+                                            <color key="titleColor" red="0.0" green="0.50196081400000003" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                        </state>
                                         <connections>
-                                            <action selector="btnDismissAllAction:" destination="BYZ-38-t0r" eventType="touchUpInside" id="5Ja-SY-BNd"/>
+                                            <action selector="btnDismissAllAction:" destination="BYZ-38-t0r" eventType="touchUpInside" id="BiP-AC-YaB"/>
                                         </connections>
                                     </button>
                                 </subviews>
