--- a/TinyToastSample/Base.lproj/Main.storyboard
+++ b/TinyToastSample/Base.lproj/Main.storyboard
@@ -6,6 +6,7 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13156.2"/>
+        <capability name="Constraints with non-1.0 multipliers" minToolsVersion="5.1"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -137,9 +138,9 @@
                             <stackView opaque="NO" contentMode="scaleToFill" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="b38-0Z-WXu">
                                 <rect key="frame" x="20" y="303" width="335" height="30"/>
                                 <subviews>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="B2u-tA-dzO" customClass="StandardButton" customModule="TinyToastSample" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="0.0" width="108.5" height="30"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="B2u-tA-dzO" customClass="ButtonWithUL" customModule="TinyToastSample" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="0.0" width="135.5" height="30"/>
+                                        <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="16"/>
                                         <state key="normal" title="show">
                                             <color key="titleColor" red="0.0" green="0.50196081400000003" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                         </state>
@@ -148,8 +149,8 @@
                                         </connections>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="L3N-hj-uDs" customClass="StandardButton" customModule="TinyToastSample" customModuleProvider="target">
-                                        <rect key="frame" x="113.5" y="0.0" width="108" height="30"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                                        <rect key="frame" x="140.5" y="0.0" width="95" height="30"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                         <state key="normal" title="dismiss">
                                             <color key="titleColor" red="0.0" green="0.50196081400000003" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                         </state>
@@ -158,8 +159,8 @@
                                         </connections>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="A2n-YE-C7G" customClass="StandardButton" customModule="TinyToastSample" customModuleProvider="target">
-                                        <rect key="frame" x="226.5" y="0.0" width="108.5" height="30"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                                        <rect key="frame" x="240.5" y="0.0" width="94.5" height="30"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                         <state key="normal" title="dismissAll">
                                             <color key="titleColor" red="0.0" green="0.50196081400000003" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                         </state>
@@ -171,10 +172,10 @@
                                 <constraints>
                                     <constraint firstItem="L3N-hj-uDs" firstAttribute="top" secondItem="b38-0Z-WXu" secondAttribute="top" id="2mr-kC-ZYQ"/>
                                     <constraint firstAttribute="trailing" secondItem="A2n-YE-C7G" secondAttribute="trailing" id="CFg-CK-9qu"/>
-                                    <constraint firstItem="A2n-YE-C7G" firstAttribute="width" secondItem="B2u-tA-dzO" secondAttribute="width" id="CNe-MM-Xjt"/>
+                                    <constraint firstItem="A2n-YE-C7G" firstAttribute="width" secondItem="B2u-tA-dzO" secondAttribute="width" multiplier="0.7" id="CNe-MM-Xjt"/>
                                     <constraint firstAttribute="bottom" secondItem="B2u-tA-dzO" secondAttribute="bottom" id="DNI-KJ-3KN"/>
                                     <constraint firstItem="B2u-tA-dzO" firstAttribute="top" secondItem="b38-0Z-WXu" secondAttribute="top" id="G4j-hl-mAE"/>
-                                    <constraint firstItem="L3N-hj-uDs" firstAttribute="width" secondItem="B2u-tA-dzO" secondAttribute="width" id="Jad-dj-slg"/>
+                                    <constraint firstItem="L3N-hj-uDs" firstAttribute="width" secondItem="B2u-tA-dzO" secondAttribute="width" multiplier="0.7" id="Jad-dj-slg"/>
                                     <constraint firstAttribute="bottom" secondItem="L3N-hj-uDs" secondAttribute="bottom" id="MNJ-4m-jty"/>
                                     <constraint firstItem="B2u-tA-dzO" firstAttribute="leading" secondItem="b38-0Z-WXu" secondAttribute="leading" id="RPC-B7-AdT"/>
                                     <constraint firstItem="A2n-YE-C7G" firstAttribute="top" secondItem="b38-0Z-WXu" secondAttribute="top" id="SGh-nN-qYu"/>
